[package]
name = "nom-gcode"
description = "GCode parser using Nom"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0-alpha.1"
thiserror = "1.0.20"
