[package]
name = "nom-gcode"
description = "GCode parser using Nom"
version = "0.1.0"
authors = ["D1plo1d <thatotherdude@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parse_gcode"
harness = false

[dependencies]
nom = "7.1.0"
thiserror = "1.0.20"
